# CLive

./: README.md
app/: build.gradle
app/src/androidTest/java/com/mrcodesniper/jnilive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: C++  CMakeLists.txt  bspatch.c  com_ywl5320_bspatchywl5320_BsPatchYwl5320Util.h  native-lib.cpp
app/src/main/java/com/mrcodesniper/jnilive/: BsHelper.java  MainActivity.java  NativeHelper.java  Person.java  readme
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/mrcodesniper/jnilive/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
